--- a/css/nav.css
+++ b/css/nav.css
@@ -1,50 +1,34 @@
-#menu a:hover {
-	color: white;
-	background-color: none;
-}
+/* Navbar */
 
-#menu a {
-	text-decoration: none;
-	text-align: center;
+.menu {
+	background-color: #6A77FF;
+	width: 100%;
 	font-size: large;
 }
 
-#menu a:visited {
+.menu ul {
+	list-style-type: none;
+	margin: 0;
+	padding-left: 0;
+	display: flex;
+	justify-content: center;
+}
+
+/* Links(<a> tag changes) */
+
+.menu a {
+	text-decoration: none;
+	font-size: large;
+	display: block;
+	padding: 20px;
 	color: black;
 }
 
-
-.menu ul {
-	border-collapse: collapse;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	width: 65%;
+.menu a:visited {
+	color: black;
 }
 
-.menu {
-	border-bottom: 1px solid #6A77FF;
-	float: right;
-}
-
-
-
-@media (min-width: 760px) {
-	ul#menu {
-		margin: 0px;
-		list-style-type: none;
-		padding-left: 0px;
-	}
-	#menu a {
-		color: #530758;
-		display: block;
-		padding: 5px 20px;
-		background-color: #6A77FF;
-	}
-	.menu li {
-	display: table-cell;
-	}
-	.menu ul {
-		width: 100%;
-	}
+.menu a:hover {
+	color: white;
+	background-color: black;
 }
